--- a/css/base.css
+++ b/css/base.css
@@ -31,6 +31,7 @@ body {
   line-height: 1;
   background-color: #fafafa;
   font-family: Microsoft JhengHei;
+  -webkit-overflow-scrolling: touch;
 }
 ol, ul {
   list-style: none;
@@ -489,6 +490,7 @@ h2:before{
   width: 100%;
   height: 100%;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
   background: #fafafa;
   color: #424242;
   padding-top: 68px;
