--- a/css/base.css
+++ b/css/base.css
@@ -61,10 +61,12 @@ a:hover{
   transition: ease 0.5s;
 }
 
+/*jQuery-class*/
 .lock-position{
+  width: 100vw;
   height: 100vh;
   overflow: hidden;
-  position: relative;
+  position: fixed;
 }
 
 /*  clearfix
@@ -494,6 +496,7 @@ h2:before{
   z-index: 999;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   background: #fafafa;
